@@ -1,3 +1,7 @@
+Mon Nov 09 01:58:19 GMT 2009  Richard Boulton <richard@lemurconsulting.com>
+
+	* xappy/perftest/harness.py: Fix some bugs in the timers.
+
 Sun Nov 08 11:27:35 GMT 2009  Richard Boulton <richard@lemurconsulting.com>
 
 	* xappy/unittests/cached_searches.py: Update test for new search
